[package]

name = "output"
version = "0.3.0"

authors = [
	"James Pharaoh <james@pharaoh.uk>"
]

description = "Simple CLI output tools"
license = "MIT"
homepage = "https://gitlab.wellbehavedsoftware.com/james/rust-output"
repository = "https://gitlab.wellbehavedsoftware.com/james/rust-output"

[dependencies]

libc = "0.2"
termion = "1.1"

# ex: noet ts=4 filetype=toml
