[package]

	name = "output"
	version = "0.6.2"

	authors = [
		"James Pharaoh <james@pharaoh.uk>"
	]

	description = "Simple CLI output tools"
	license = "MIT"
	homepage = "https://gitlab.wellbehavedsoftware.com/james/rust-output"
	repository = "https://gitlab.wellbehavedsoftware.com/james/rust-output"

[dependencies]

	lazy_static = "0.2"
	libc = "0.2"
	termion = "1.1"

# ex: noet ts=4 filetype=toml
